--- a/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
+++ b/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EfK-HS-OBD">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EfK-HS-OBD">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -14,11 +12,11 @@
             <objects>
                 <viewController storyboardIdentifier="pokemon" id="EfK-HS-OBD" customClass="PokemonSelectedVc" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xZc-em-SYW">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K7y-wS-Z1d">
-                                <rect key="frame" x="0.0" y="0.0" width="390" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="600" id="Ins-fi-N1W" customClass="NSLayoutHelper" customModule="LayoutHelper">
@@ -37,7 +35,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWG-dW-4Xd">
-                                <rect key="frame" x="30" y="67" width="40" height="34"/>
+                                <rect key="frame" x="30" y="20" width="40" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="R3l-lv-sJ4"/>
                                 </constraints>
@@ -49,13 +47,13 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pokebolaFundo" translatesAutoresizingMaskIntoConstraints="NO" id="WgH-X6-wHS">
-                                <rect key="frame" x="0.0" y="167" width="390" height="328"/>
+                                <rect key="frame" x="0.0" y="120" width="600" height="328"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="328" id="mLY-OV-7h9"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CJ4-9Y-qVh">
-                                <rect key="frame" x="0.0" y="444" width="390" height="400"/>
+                                <rect key="frame" x="0.0" y="200" width="600" height="400"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Planta" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKh-Ad-1ue">
                                         <rect key="frame" x="80" y="66" width="103" height="21"/>
@@ -69,7 +67,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Venenoso" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pOP-O8-6Cs">
-                                        <rect key="frame" x="207" y="66" width="103" height="21"/>
+                                        <rect key="frame" x="417" y="66" width="103" height="21"/>
                                         <color key="backgroundColor" red="0.81314018904737895" green="0.29468450680747105" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="KHg-ic-CMH"/>
@@ -80,7 +78,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="o4R-Ro-HrG">
-                                        <rect key="frame" x="0.0" y="113" width="390" height="287"/>
+                                        <rect key="frame" x="0.0" y="113" width="600" height="287"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vuz-DW-Z1o">
                                             <size key="itemSize" width="128" height="128"/>
@@ -129,13 +127,13 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bubasauro" translatesAutoresizingMaskIntoConstraints="NO" id="IC3-T9-cyx">
-                                <rect key="frame" x="60" y="262" width="270" height="235"/>
+                                <rect key="frame" x="60" y="215" width="480" height="235"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="235" id="xqL-WY-gjd"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="50x-p5-15w">
-                                <rect key="frame" x="294" y="57" width="76" height="46"/>
+                                <rect key="frame" x="504" y="10" width="76" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="76" id="Cbm-E1-HI7"/>
                                     <constraint firstAttribute="height" constant="46" id="G7S-XZ-3Dq"/>
@@ -145,7 +143,7 @@
                                 <buttonConfiguration key="configuration" style="plain" image="evaluation-empty-star-evaluation-infographic-icon-with-png-355165-removebg-preview 1"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bulbasaur" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qxD-ml-ytI">
-                                <rect key="frame" x="10" y="120" width="370" height="49"/>
+                                <rect key="frame" x="10" y="120" width="580" height="49"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="49" id="AyG-kC-Si3"/>
                                 </constraints>
@@ -154,7 +152,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nº 001" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GiE-bE-6Q3">
-                                <rect key="frame" x="165.66666666666666" y="178" width="58.666666666666657" height="28"/>
+                                <rect key="frame" x="270.66666666666669" y="131" width="58.666666666666686" height="28"/>
                                 <fontDescription key="fontDescription" name="KohinoorDevanagari-Regular" family="Kohinoor Devanagari" pointSize="20"/>
                                 <color key="textColor" red="0.19200724418964205" green="0.19337628191352912" blue="0.19748339508519031" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -241,9 +239,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="TelaBottomView" destination="CJ4-9Y-qVh" id="d2C-NZ-7dQ"/>
+                        <outlet property="bottomView" destination="CJ4-9Y-qVh" id="d2C-NZ-7dQ"/>
                         <outlet property="infoCollectionView" destination="o4R-Ro-HrG" id="Tnr-Ky-Yfn"/>
-                        <outlet property="telaTopView" destination="K7y-wS-Z1d" id="U7x-M3-GD8"/>
+                        <outlet property="topView" destination="K7y-wS-Z1d" id="U7x-M3-GD8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XMS-cR-dL9" sceneMemberID="firstResponder"/>
