fizemos alert do esqueceu a senha

--- a/Pokedex/ForgotPassword/ForgotPasswordStoryboard.storyboard
+++ b/Pokedex/ForgotPassword/ForgotPasswordStoryboard.storyboard
@@ -33,6 +33,9 @@
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="15"/>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="tappedSendButton:" destination="nqP-MZ-b6f" eventType="touchUpInside" id="4LU-b1-UjB"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoPokemon" translatesAutoresizingMaskIntoConstraints="NO" id="auu-y1-lIj">
                                 <rect key="frame" x="22" y="97" width="346" height="131"/>
