--- a/Pokedex/Cell/HomeCollection/HomeCollectionViewCell.xib
+++ b/Pokedex/Cell/HomeCollection/HomeCollectionViewCell.xib
@@ -34,37 +34,19 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="verde" translatesAutoresizingMaskIntoConstraints="NO" id="NAk-Ts-H1D">
-                        <rect key="frame" x="384" y="33" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="30" id="rhs-El-Ee4"/>
-                            <constraint firstAttribute="height" constant="30" id="tg3-S3-MfL"/>
-                        </constraints>
-                    </imageView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="roxo" translatesAutoresizingMaskIntoConstraints="NO" id="Cu5-mf-M7F">
-                        <rect key="frame" x="416" y="33" width="30" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="4fi-P0-H0f"/>
-                            <constraint firstAttribute="width" constant="30" id="ggI-Fc-14p"/>
-                        </constraints>
-                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="7u8-fe-iMk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="8Te-Na-MfA"/>
-                <constraint firstAttribute="trailing" secondItem="Cu5-mf-M7F" secondAttribute="trailing" constant="20" id="8uI-8d-3iv"/>
                 <constraint firstAttribute="trailing" secondItem="skq-z7-7Pm" secondAttribute="trailing" constant="5" id="NFe-k7-ov6"/>
                 <constraint firstItem="skq-z7-7Pm" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="P8H-af-9ZP"/>
                 <constraint firstAttribute="bottom" secondItem="skq-z7-7Pm" secondAttribute="bottom" constant="5" id="Qoc-Pw-arH"/>
-                <constraint firstItem="Cu5-mf-M7F" firstAttribute="leading" secondItem="NAk-Ts-H1D" secondAttribute="trailing" constant="2" id="RHU-gW-h4U"/>
                 <constraint firstItem="skq-z7-7Pm" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="YtH-RN-gEp"/>
-                <constraint firstItem="NAk-Ts-H1D" firstAttribute="centerY" secondItem="Cu5-mf-M7F" secondAttribute="centerY" id="ZbR-kF-Azr"/>
                 <constraint firstItem="4d8-fA-75O" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="g14-VK-lrI"/>
                 <constraint firstItem="4d8-fA-75O" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="iwo-RZ-sYp"/>
                 <constraint firstItem="7u8-fe-iMk" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="wmZ-8W-Joc"/>
-                <constraint firstItem="Cu5-mf-M7F" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="yRS-bk-QY0"/>
             </constraints>
             <size key="customSize" width="466" height="96"/>
             <connections>
@@ -72,11 +54,7 @@
                 <outlet property="iconImageView" destination="7u8-fe-iMk" id="jrn-Ai-Voe"/>
                 <outlet property="namePokemonLabel" destination="4d8-fA-75O" id="Clr-lg-JXh"/>
             </connections>
-            <point key="canvasLocation" x="371.01449275362324" y="125.22321428571428"/>
+            <point key="canvasLocation" x="96" y="102"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="roxo" width="500" height="500"/>
-        <image name="verde" width="500" height="500"/>
-    </resources>
 </document>
