--- a/Pokedex/Cell/HomeCollection/HomeCollectionViewCell.xib
+++ b/Pokedex/Cell/HomeCollection/HomeCollectionViewCell.xib
@@ -11,25 +11,31 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCollectionViewCell" id="gTV-IL-0wX" customClass="HomeCollectionViewCell" customModule="Pokedex" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="466" height="96"/>
+            <rect key="frame" x="0.0" y="0.0" width="205" height="178"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="466" height="96"/>
+                <rect key="frame" x="0.0" y="0.0" width="205" height="178"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="skq-z7-7Pm">
-                        <rect key="frame" x="5" y="5" width="456" height="86"/>
+                        <rect key="frame" x="5" y="5" width="195" height="168"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7u8-fe-iMk">
+                                <rect key="frame" x="-2.5" y="-16" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="bwP-mJ-Tq2"/>
+                                    <constraint firstAttribute="width" constant="200" id="nEP-Sx-UFL"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7u8-fe-iMk">
-                        <rect key="frame" x="20" y="23" width="50" height="50"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="HfH-3L-4Im"/>
-                            <constraint firstAttribute="height" constant="50" id="OIL-ra-KaY"/>
+                            <constraint firstItem="7u8-fe-iMk" firstAttribute="centerY" secondItem="skq-z7-7Pm" secondAttribute="centerY" id="Bjq-qB-eZT"/>
+                            <constraint firstItem="7u8-fe-iMk" firstAttribute="centerX" secondItem="skq-z7-7Pm" secondAttribute="centerX" id="s7Q-9z-55k"/>
                         </constraints>
-                    </imageView>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4d8-fA-75O">
-                        <rect key="frame" x="212" y="37.5" width="42" height="21"/>
+                        <rect key="frame" x="82" y="137" width="41.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -39,22 +45,20 @@
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="7u8-fe-iMk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="20" id="8Te-Na-MfA"/>
                 <constraint firstAttribute="trailing" secondItem="skq-z7-7Pm" secondAttribute="trailing" constant="5" id="NFe-k7-ov6"/>
                 <constraint firstItem="skq-z7-7Pm" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="P8H-af-9ZP"/>
                 <constraint firstAttribute="bottom" secondItem="skq-z7-7Pm" secondAttribute="bottom" constant="5" id="Qoc-Pw-arH"/>
+                <constraint firstItem="4d8-fA-75O" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="XDA-Nu-0c0"/>
                 <constraint firstItem="skq-z7-7Pm" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="YtH-RN-gEp"/>
-                <constraint firstItem="4d8-fA-75O" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="g14-VK-lrI"/>
-                <constraint firstItem="4d8-fA-75O" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="iwo-RZ-sYp"/>
-                <constraint firstItem="7u8-fe-iMk" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="wmZ-8W-Joc"/>
+                <constraint firstAttribute="bottom" secondItem="4d8-fA-75O" secondAttribute="bottom" constant="20" id="yp9-HL-ib5"/>
             </constraints>
-            <size key="customSize" width="466" height="96"/>
+            <size key="customSize" width="205" height="178"/>
             <connections>
                 <outlet property="backGroundView" destination="skq-z7-7Pm" id="CdX-sy-A17"/>
                 <outlet property="iconImageView" destination="7u8-fe-iMk" id="jrn-Ai-Voe"/>
                 <outlet property="namePokemonLabel" destination="4d8-fA-75O" id="Clr-lg-JXh"/>
             </connections>
-            <point key="canvasLocation" x="96" y="102"/>
+            <point key="canvasLocation" x="-22.463768115942031" y="34.151785714285715"/>
         </collectionViewCell>
     </objects>
 </document>
