--- a/Pokedex/Main.storyboard
+++ b/Pokedex/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iEh-2R-FaO">
-                                <rect key="frame" x="0.0" y="161" width="414" height="616"/>
+                                <rect key="frame" x="10" y="161" width="394" height="616"/>
                                 <color key="backgroundColor" systemColor="systemCyanColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jJb-sc-CTV">
                                     <size key="itemSize" width="128" height="128"/>
@@ -55,10 +55,10 @@
                             <constraint firstItem="ZAr-zg-R2B" firstAttribute="leading" secondItem="8pd-RD-IIF" secondAttribute="trailing" constant="22" id="9Gw-OJ-v6a"/>
                             <constraint firstItem="iEh-2R-FaO" firstAttribute="top" secondItem="ZAr-zg-R2B" secondAttribute="bottom" constant="12" id="PKB-h1-E3n"/>
                             <constraint firstItem="DkK-wa-gnF" firstAttribute="bottom" secondItem="iEh-2R-FaO" secondAttribute="bottom" constant="36" id="dJu-lg-6ud"/>
-                            <constraint firstItem="iEh-2R-FaO" firstAttribute="leading" secondItem="DkK-wa-gnF" secondAttribute="leading" id="jDi-KI-mBo"/>
+                            <constraint firstItem="iEh-2R-FaO" firstAttribute="leading" secondItem="DkK-wa-gnF" secondAttribute="leading" constant="10" id="jDi-KI-mBo"/>
                             <constraint firstItem="8pd-RD-IIF" firstAttribute="leading" secondItem="DkK-wa-gnF" secondAttribute="leading" constant="35" id="qHj-KL-bLc"/>
                             <constraint firstItem="DkK-wa-gnF" firstAttribute="trailing" secondItem="ZAr-zg-R2B" secondAttribute="trailing" constant="36" id="qcb-aC-rkM"/>
-                            <constraint firstItem="DkK-wa-gnF" firstAttribute="trailing" secondItem="iEh-2R-FaO" secondAttribute="trailing" id="sEd-HA-iDG"/>
+                            <constraint firstItem="DkK-wa-gnF" firstAttribute="trailing" secondItem="iEh-2R-FaO" secondAttribute="trailing" constant="10" id="sEd-HA-iDG"/>
                             <constraint firstItem="ZAr-zg-R2B" firstAttribute="centerY" secondItem="8pd-RD-IIF" secondAttribute="centerY" id="vDv-Kx-dQu"/>
                         </constraints>
                     </view>
